# fuzzy-matcher

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  config.toml  hello.py  pyproject.toml  requirements.txt
.github/workflows/: run_pytest.yaml
src/: configuration.py  file_tasks.py  local_run.py  log_utils.py  main.py  matching.py  slack_app.py
src/backend/: helper_classes.py  io_processing.py
src/backend/input/: test.csv
src/matching/: main.py  str_utils.py
src/utils/: io_processing.py  str_utils.py
tests/: conftest.py  data_classes_test.py  helper_classes.py  helper_classes_test.py  io_processing_test.py
